[package]
name = "polkadot-test-runtime-client"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "ashley-remove-service-builder" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "ashley-remove-service-builder" }
sc-light = { git = "https://github.com/paritytech/substrate", branch = "ashley-remove-service-builder" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "ashley-remove-service-builder", features = ["test-helpers"],  default-features = false }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "ashley-remove-service-builder" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "ashley-remove-service-builder" }
polkadot-test-runtime = { path = ".." }
polkadot-runtime-common = { path = "../../common" }
polkadot-primitives = { path = "../../../primitives" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "ashley-remove-service-builder" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "ashley-remove-service-builder" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "ashley-remove-service-builder" }
codec = { package = "parity-scale-codec", version = "1.0.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "ashley-remove-service-builder" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "ashley-remove-service-builder" }
futures = "0.3.1"
